Mon Mar 23 21:54:20 2009  Akinori MUSHA  <knu@iDaemons.org>

	* process.c: Eliminate an "unused variable" warning.

Mon Mar 23 21:18:30 2009  Akinori MUSHA  <knu@iDaemons.org>

	* ext/stringio/stringio.c (StringIO#ungetbyte): New method
	  backported from 1.9.

Mon Mar 23 21:16:21 2009  Akinori MUSHA  <knu@iDaemons.org>

	* process.c: Stick with the K&R style in 1.8.

Mon Mar 23 21:07:09 2009  Akinori MUSHA  <knu@iDaemons.org>

	* io.c (IO#ungetbyte): New method backported from 1.9.

	* array.c (ary_resize_capa): Remove an unused function.

	* array.c, bignum.c, dir.c, enumerator.c, gc.c, io.c, numeric.c,
	  object.c, re.c, string.c, struct.c: Mixing two styles is not a
	  good thing.  Stick with the K&R style in 1.8.

Sun Mar 22 20:39:38 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit.rb: use Kernel.exit to get rid of using
	  IRB::ExtendCommandBundle#exit.  a patch from Dmitry Vazhov at
	  [ruby-core:22986].

Fri Mar 20 22:55:00 2009  Akinori MUSHA  <knu@iDaemons.org>

	* object.c (rb_convert_type, rb_to_integer)
	  (rb_check_convert_type): Improve error messages.

Fri Mar 20 18:41:53 2009  Akinori MUSHA  <knu@iDaemons.org>

	* array.c (Array#try_convert): New method backported from 1.9.

	* hash.c (Hash#try_convert): New method backported from 1.9.

	* io.c (IO#try_convert): New method backported from 1.9.

	* re.c (Regexp#try_convert): New method backported from 1.9.

	* string.c (String#try_convert): New method backported from 1.9.

Fri Mar 20 18:01:12 2009  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_digest.c (GetDigestPtr): use StringValueCStr
	  instead of STR2CSTR.

	* ext/openssl/ossl_pkey_ec.c (ossl_ec_key_initialize): ditto.
	  (ossl_ec_group_initialize): ditto.

Thu Mar 19 23:18:44 2009  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_ssl.c: revert incomplete read_nonblock
	  implemenatation.

Wed Mar 18 02:30:41 2009  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/drb.rb (open_server_inaddr_any): fixed multiple network